<resources>
    <string name="app_name">Project Management</string>
    <string name="activity">Activity</string>
    <string name="calendar">Calendar</string>
    <string name="projects">Projects</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_organizations">Your organizations</string>
    <string name="your_chatrooms">Your chatrooms</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="new_project">New Project</string>
    <string name="project_title">Project title</string>
    <string name="project_details">Project details</string>
    <string name="project_description">Project description</string>
    <string name="project_stage">Project stage</string>
    <string name="add_members">Add members</string>
    <string name="start_date">start date</string>
    <string name="end_date">end date</string>
    <string name="team_members">Team members</string>
    <string name="attach_document">Attach document, add members, assign org</string>
    <string name="save">Save</string>
    <string name="search_people">Search people</string>
    <string name="search_organizations">search organizations</string>
    <string name="done">Done</string>
    <string name="organization_name">Organization name</string>
    <string name="new_organization">New Organization</string>
    <string name="organization_about">Organization about</string>
    <string-array name="project_stages">
        <item>Initial</item>
        <item>Ongoing</item>
        <item>Completed</item>
    </string-array>
    <string name="lorem">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna
        aliqua. Ut enim ad minim veniam, quis nostrud exercitation
        ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit
        esse cillum dolore eu fugiat nulla pariatur.
    </string>
    <string name="management">Management</string>
    <string name="progress">Progress: </string>
    <string name="not_member">You are not a member of this group</string>
    <string name="request_add">Request Add</string>
    <string name="add_project">Add Project</string>
    <string name="attach_files">Attach files</string>
    <string name="assign_organization">Assign Organization</string>
    <string name="organizations">Organizations</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="members">Members</string>
    <string name="your_name">Your name</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="allow_notif">Allow Notifications</string>
    <string name="dark_theme">Dark theme</string>
    <string name="default_message">Default Reply Message</string>
    <string name="developr">Developer</string>
    <string name="no_about">No About Found, you can update your profile about</string>
    <string name="chatroom">Chatroom</string>
    <string name="new_chatroom">New Chatroom</string>
</resources>