<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:icon="@drawable/ic_message"
            app:key="default_message"
            app:title="@string/default_message"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:icon="@drawable/ic_reply"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:icon="@drawable/ic_notifications"
            app:key="sync"
            app:title="@string/allow_notif" />

        <SwitchPreferenceCompat
            android:key="backup"
            android:summary="Automatically backup my data"
            app:icon="@drawable/ic_backup"
            app:title="Auto backup" />

        <ListPreference
            android:defaultValue="Never"
            android:key="backup_frequency"
            app:entries="@array/backup_frequency"
            app:entryValues="@array/backup_values"
            app:icon="@drawable/ic_refresh"
            app:title="Select backup frequency"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            android:key="auto_download"
            app:icon="@drawable/ic_arrow_circle"
            app:title="Auto download files" />

        <SwitchPreferenceCompat
            app:dependency="auto_download"
            app:icon="@drawable/ic_attachment"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="Appearance">

        <SwitchPreferenceCompat
            android:key="theme"
            app:icon="@drawable/ic_dark_mode"
            app:title="@string/dark_theme" />

    </PreferenceCategory>

    <PreferenceCategory app:title="About">

        <Preference app:title="@string/developr"
            android:key="about"
            app:icon="@drawable/ic_info"
            app:summary="Developed by Ezekiel Wachira ezekielwachira048@gmail.com"
            />

    </PreferenceCategory>

</PreferenceScreen>