<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/actionSearch"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/actionNewProject"
        android:title="@string/new_project"
        android:icon="@drawable/ic_new_folder"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/actionMore"
        android:title=""
        app:showAsAction="always"
        android:icon="@drawable/ic_more_vert"
        >

        <menu>
            <item android:id="@+id/actionNewOrg"
                android:icon="@drawable/ic_building"
                android:iconTint="@color/lightestGrey"
                android:title="@string/new_organization"
                app:showAsAction="never"/>


            <item android:id="@+id/actionChatroom"
                android:title="@string/chatroom"
                android:icon="@drawable/ic_conversation"
                android:iconTint="@color/lightestGrey"
                app:showAsAction="never">

                <menu>
                    <item
                        android:title="@string/new_chatroom"
                        android:icon="@drawable/ic_comment"
                        app:showAsAction="never"
                        android:id="@+id/actionNewChatroom"/>
                    <item android:title="@string/your_chatrooms"
                        android:icon="@drawable/ic_conversation"
                        app:showAsAction="never"
                        android:id="@+id/actionYourChatroom"/>
                </menu>

            </item>

            <item android:id="@+id/actionOrganization"
                android:icon="@drawable/ic_building"
                android:iconTint="@color/lightestGrey"
                android:title="@string/your_organizations"
                app:showAsAction="never"/>

            <item android:id="@+id/actionLogout"
                android:title="@string/logout"
                android:iconTint="@color/lightestGrey"
                app:showAsAction="never"
                android:icon="@drawable/ic_logout_"/>
        </menu>

    </item>

<!--    <item android:id="@+id/actionNewOrg"-->
<!--        android:icon="@drawable/ic_business"-->
<!--        android:title="@string/new_organization"-->
<!--        app:showAsAction="never"/>-->


<!--    <item android:id="@+id/actionChatroom"-->
<!--        android:title="@string/your_chatrooms"-->
<!--        android:icon="@drawable/ic_chat"-->
<!--        app:showAsAction="never"/>-->

<!--    <item android:id="@+id/actionOrganization"-->
<!--        android:icon="@drawable/ic_house"-->
<!--        android:title="@string/your_organizations"-->
<!--        app:showAsAction="never"/>-->

<!--    <item android:id="@+id/actionLogout"-->
<!--        android:title="@string/logout"-->
<!--        app:showAsAction="never"-->
<!--        android:icon="@drawable/ic_login"/>-->

</menu>