<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.newproject.NewProjectActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_100sdp">


            <TextView
                android:id="@+id/projectDetailsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/project_details"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/projectTitleHolder"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:hint="@string/project_title"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/projectDetailsTextView"
                app:startIconDrawable="@drawable/ic_new_folder"
                tools:layout_editor_absoluteY="107dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/projectTitleEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/projectDescriptionHolder"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:hint="@string/project_description"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="@+id/projectTitleHolder"
                app:layout_constraintStart_toStartOf="@+id/projectTitleHolder"
                app:layout_constraintTop_toBottomOf="@+id/projectTitleHolder"
                app:startIconDrawable="@drawable/ic_info">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/projectDescriptionEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/projectStageHolder"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:hint="@string/project_stage"
                app:layout_constraintStart_toStartOf="@+id/projectDescriptionHolder"
                app:layout_constraintTop_toBottomOf="@+id/projectDescriptionHolder"
                app:startIconDrawable="@drawable/ic_info">

                <AutoCompleteTextView
                    android:id="@+id/projectStageTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:imeOptions="actionNext"
                    android:inputType="none"
                    android:text="@string/project_stage" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/dateHolders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/projectStageHolder">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/startDateWrapper"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_weight="0.5"
                    android:hint="@string/start_date"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/ic_date_range">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/startDateEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_weight="0.5"
                    android:hint="@string/end_date"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/ic_date_range">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/endDateEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/membersLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dateHolders">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Members"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/members_chip_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp" />

                <!--                <androidx.recyclerview.widget.RecyclerView-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:id="@+id/newProjectMembersRV"/>-->

            </LinearLayout>

            <LinearLayout
                android:id="@+id/organizationLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/membersLayout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/organizations"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipOrgGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/newProjectOrgsRV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/btmSheet"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_250sdp"
        android:layout_marginStart="@dimen/_7sdp"
        android:layout_marginEnd="@dimen/_7sdp"
        android:background="@drawable/snackbar_bg"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:src="@drawable/ic_arrow_up" />

            <Button
                android:id="@+id/btnAddMembers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:text="@string/add_members"
                app:icon="@drawable/ic_person_add" />

            <Button
                android:id="@+id/btnAddOrg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:text="@string/assign_organization"
                app:icon="@drawable/ic_business" />

            <Button
                android:id="@+id/btnAttachFiles"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:text="@string/attach_files"
                app:icon="@drawable/ic_attach_file"
                app:iconPadding="@dimen/_10sdp"
                app:strokeColor="@color/orange"
                app:strokeWidth="@dimen/_1sdp" />
        </LinearLayout>
    </FrameLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>